Closed Bug 674491 Opened 13 years ago Closed 13 years ago

IonMonkey: Ignore empty LMoveGroups in code generator.

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: adrake, Assigned: adrake)

References

Details

Attachments

(1 file)

These can get emitted if the linear scan allocator eliminates all of the moves in a group as part of its' optimizations. They could be removed at reification time, but this would be more complicated than just ignoring them in the code generator.
Attached patch Patch v0Splinter Review
Just a quick early bail at the top of visitMoveGroup.
Attachment #548738 - Flags: review?(dvander)
Comment on attachment 548738 [details] [diff] [review]
Patch v0

Review of attachment 548738 [details] [diff] [review]:
-----------------------------------------------------------------
Attachment #548738 - Flags: review?(dvander) → review+
http://hg.mozilla.org/projects/ionmonkey/rev/6aba51ebc1b9
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: