Bug 674491: Ignore empty LMoveGroups in code generator. r=dvander