js/src/ion/shared/CodeGenerator-x86-shared.cpp
@@ -198,6 +198,9 @@ CodeGeneratorX86Shared::toMoveOperand(const LAllocation *a)
 bool
 CodeGeneratorX86Shared::visitMoveGroup(LMoveGroup *group)
 {
+    if (!group->numMoves())
+        return true;
+
     MoveResolver &resolver = masm.moveResolver();
 
     for (size_t i = 0; i < group->numMoves(); i++) {
